; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-xobject.c_pdf_update_xobject.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-xobject.c_pdf_update_xobject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BBox = common dso_local global i32 0, align 4
@Matrix = common dso_local global i32 0, align 4
@Resources = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pdf_update_xobject(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32* %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  store i32* %6, i32** %14, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = load i32, i32* @BBox, align 4
  %18 = call i32 @PDF_NAME(i32 %17)
  %19 = load i32, i32* %11, align 4
  %20 = call i32 @pdf_dict_put_rect(i32* %15, i32* %16, i32 %18, i32 %19)
  %21 = load i32*, i32** %8, align 8
  %22 = load i32*, i32** %10, align 8
  %23 = load i32, i32* @Matrix, align 4
  %24 = call i32 @PDF_NAME(i32 %23)
  %25 = load i32, i32* %12, align 4
  %26 = call i32 @pdf_dict_put_matrix(i32* %21, i32* %22, i32 %24, i32 %25)
  %27 = load i32*, i32** %13, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %29, label %36

29:                                               ; preds = %7
  %30 = load i32*, i32** %8, align 8
  %31 = load i32*, i32** %10, align 8
  %32 = load i32, i32* @Resources, align 4
  %33 = call i32 @PDF_NAME(i32 %32)
  %34 = load i32*, i32** %13, align 8
  %35 = call i32 @pdf_dict_put(i32* %30, i32* %31, i32 %33, i32* %34)
  br label %42

36:                                               ; preds = %7
  %37 = load i32*, i32** %8, align 8
  %38 = load i32*, i32** %10, align 8
  %39 = load i32, i32* @Resources, align 4
  %40 = call i32 @PDF_NAME(i32 %39)
  %41 = call i32 @pdf_dict_del(i32* %37, i32* %38, i32 %40)
  br label %42

42:                                               ; preds = %36, %29
  %43 = load i32*, i32** %8, align 8
  %44 = load i32*, i32** %9, align 8
  %45 = load i32*, i32** %10, align 8
  %46 = load i32*, i32** %14, align 8
  %47 = call i32 @pdf_update_stream(i32* %43, i32* %44, i32* %45, i32* %46, i32 0)
  ret void
}

declare dso_local i32 @pdf_dict_put_rect(i32*, i32*, i32, i32) #1

declare dso_local i32 @PDF_NAME(i32) #1

declare dso_local i32 @pdf_dict_put_matrix(i32*, i32*, i32, i32) #1

declare dso_local i32 @pdf_dict_put(i32*, i32*, i32, i32*) #1

declare dso_local i32 @pdf_dict_del(i32*, i32*, i32) #1

declare dso_local i32 @pdf_update_stream(i32*, i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
